<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    android:orientation="vertical"
    tools:context="com.zaozao.comics.register.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/back" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="185dp"
        android:src="@drawable/comics" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/register_bg1"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="5dp"
        android:hint="@string/edit_register_phone_hint"
        android:maxLength="11"
        android:paddingLeft="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_selector">

        <EditText
            android:id="@+id/input_code"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/yz_code" />

        <Button
            android:id="@+id/click"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:background="@drawable/button_selector2"
            android:text="@string/click" />
    </LinearLayout>

    <Button
        android:id="@+id/yz_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/register_bg2"
        android:text="@string/btn_register_phone" />
</LinearLayout>
