<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navigation">

    </FrameLayout>

    <RadioGroup
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/theme"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <RadioButton
            android:id="@+id/sort"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/sort_background"
            android:gravity="center"
            android:text="@string/sort"
            android:textSize="12sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@drawable/fenge_line" />

        <RadioButton
            android:id="@+id/shujia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/shujia_background"
            android:gravity="center"
            android:text="@string/shujia"
            android:textSize="12sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@drawable/fenge_line" />

        <RadioButton
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/search_background"
            android:gravity="center"
            android:text="@string/search"
            android:textSize="12sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@drawable/fenge_line" />

        <RadioButton
            android:id="@+id/mine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/mine_background"
            android:gravity="center"
            android:text="@string/mine"
            android:textSize="12sp" />
    </RadioGroup>
</RelativeLayout>
