<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    android:orientation="vertical"
    tools:context="com.zaozao.comics.register.Register2Activity">

    <ImageView
        android:id="@+id/register_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/back" />
    <ImageView
        android:layout_marginTop="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/comics"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@drawable/login_bg"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_reg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/account"
            android:drawablePadding="10dp"
            android:textColorHint="@color/tp_black"
            android:hint="@string/nickname"
            android:maxLength="11"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider" />

        <EditText
            android:id="@+id/edt_reg_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/tp_black"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/login_pwd_logo"
            android:drawablePadding="10dp"
            android:hint="@string/edt_login_pwd_hint"
            android:inputType="textPassword"
            android:maxLength="11"
            android:textSize="12sp" />
    </LinearLayout>
    <Button
        android:onClick="register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="18sp"
        android:textColor="@color/detail"
        android:background="@drawable/login_btn_bg"
        android:text="@string/text_register" />
</LinearLayout>
